<resources>
    <string name="app_name">Late.ly</string>
    <string name="frag1text">Frag 1</string>
    <string name="frag2text">Frag 2</string>
    <string name="frag3text">Frag 3</string>
    <string name="frag4text">Frag 4</string>
    <string name="frag5text">Frag 5</string>
    <string name="topic1">POLITICS</string>
    <string name="topic2">TECH</string>
    <string name="topic3">CAREER</string>
    <string name="topic4">FOOD</string>
    <string name="topic5">DANCING</string>
    <string name="topic6">ANIMALS</string>
    <string name="topic7">LANGUAGE</string>
    <string name="topic8">NATURE</string>
    <string name="topic9">SPORTS</string>
    <string name="topic10">DATING</string>

    <string name="facebook_app_id">833865323407651</string>
    <string name="facebook_app_secret">17ef8c26c6a4379cafc0eab5a41b9ec2</string>
    <string name="accessToken">833865323407651|17ef8c26c6a4379cafc0eab5a41b9ec2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_app_id">lately-1245</string>

</resources>
