<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2d000000">

    <LinearLayout
        android:id="@+id/selection_TopLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <android.support.v7.widget.CardView
                android:id="@+id/selectionpage_politics"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                app:cardBackgroundColor="@color/colorPrimaryPolitics"
                app:cardCornerRadius="33dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/politics_icon" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/topic1"
                android:textColor="#bb000000"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <android.support.v7.widget.CardView
                android:id="@+id/selectionpage_tech"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_alignParentBottom="true"
                app:cardBackgroundColor="@color/colorPrimaryTech"
                app:cardCornerRadius="33dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/tech_icon" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/topic2"
                android:textColor="#bb000000"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <android.support.v7.widget.CardView
                android:id="@+id/selectionpage_career"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                app:cardBackgroundColor="@color/colorPrimaryCareer"
                app:cardCornerRadius="33dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/career_icon" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/topic3"
                android:textColor="#bb000000"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <android.support.v7.widget.CardView
                android:id="@+id/selectionpage_food"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_alignParentBottom="true"
                app:cardBackgroundColor="@color/colorPrimaryFood"
                app:cardCornerRadius="33dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/food_icon" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/topic4"
                android:textColor="#bb000000"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <android.support.v7.widget.CardView
                android:id="@+id/selectionpage_dancing"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                app:cardBackgroundColor="@color/colorPrimaryDancing"
                app:cardCornerRadius="33dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/dance_icon" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/topic5"
                android:textColor="#bb000000"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/selection_BottomLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/selection_TopLinearLayout"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <android.support.v7.widget.CardView
                android:id="@+id/selectionpage_animals"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_alignParentBottom="true"
                app:cardBackgroundColor="@color/colorPrimaryAnimals"
                app:cardCornerRadius="33dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/animal_icon" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/topic6"
                android:textColor="#bb000000"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <android.support.v7.widget.CardView
                android:id="@+id/selectionpage_language"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                app:cardBackgroundColor="@color/colorPrimaryLanguage"
                app:cardCornerRadius="33dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/language_icon" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/topic7"
                android:textColor="#bb000000"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <android.support.v7.widget.CardView
                android:id="@+id/selectionpage_nature"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_alignParentBottom="true"
                app:cardBackgroundColor="@color/colorPrimaryNature"
                app:cardCornerRadius="33dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/nature_icon" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/topic8"
                android:textColor="#bb000000"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <android.support.v7.widget.CardView
                android:id="@+id/selectionpage_sports"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                app:cardBackgroundColor="@color/colorPrimarySports"
                app:cardCornerRadius="33dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/sports_icon" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/topic9"
                android:textColor="#bb000000"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".2"
            android:paddingLeft="2dp"
            android:paddingRight="2dp">

            <android.support.v7.widget.CardView
                android:id="@+id/selectionpage_dating"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_alignParentBottom="true"
                app:cardBackgroundColor="@color/colorPrimaryDating"
                app:cardCornerRadius="33dp"
                app:cardElevation="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/dating_icon" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/topic10"
                android:textColor="#bb000000"
                android:textSize="12sp" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="96dp"
        android:layout_height="152dp"
        android:layout_below="@+id/selection_BottomLinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_weight=".2"
        android:paddingLeft="2dp"
        android:paddingRight="2dp">

        <android.support.v7.widget.CardView
            android:id="@+id/selectionpage_submit"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_alignParentBottom="true"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="33dp"
            app:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_home" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/selectionpage_submit"
            android:layout_centerHorizontal="true"
            android:text="Submit"
            android:textColor="#bb000000"
            android:textSize="12sp" />
    </RelativeLayout>

</RelativeLayout>
